log
Thu 25 Apr 2024 12:35:06 AM UTC: 
 tests:  0|6
total_score: 0/70
338e8dd
Thu 25 Apr 2024 05:24:11 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e1c3391
Thu 25 Apr 2024 05:53:52 PM UTC: 
 hashmap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|5
total_score: 20/70
602e431
Thu 25 Apr 2024 05:56:56 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
7fb0548
Thu 25 Apr 2024 06:01:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
ab07066
Thu 25 Apr 2024 06:08:47 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
8f5b107
Thu 25 Apr 2024 06:09:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
c7fa39c
Thu 25 Apr 2024 06:10:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
3330d02
Thu 25 Apr 2024 06:12:16 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
f15dd34
Thu 25 Apr 2024 06:12:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
462dc0b
Thu 25 Apr 2024 06:13:06 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
673dcfa
Thu 25 Apr 2024 06:20:24 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
5a7067a
Thu 25 Apr 2024 06:20:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
7e13b73
Thu 25 Apr 2024 06:20:51 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
cfd2379
Thu 25 Apr 2024 06:20:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
b073f46
Thu 25 Apr 2024 06:27:44 PM UTC: 
 hashmap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 30/70
5d28d4a
Thu 25 Apr 2024 06:28:39 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
c0519ab
Thu 25 Apr 2024 07:46:01 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:73:22: error: initialization of ‘HashMap **’ {aka ‘struct HashMap **’} from incompatible pointer type ‘Pair **’ [-Werror=incompatible-pointer-types]
   73 |   HashMap** OldBuc = map->buckets;
      |                      ^~~
hashmap.c:81:14: error: subscripted value is neither array nor pointer nor vector
   81 |     if(oldCap[i] != NULL){
      |              ^
hashmap.c:82:31: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   82 |       insertMap(map, OldBuc[i]->key, OldBuc[i]->value);
      |                               ^~
hashmap.c:82:47: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   82 |       insertMap(map, OldBuc[i]->key, OldBuc[i]->value);
      |                                               ^~
hashmap.c: In function ‘searchMap’:
hashmap.c:105:8: error: unused variable ‘pos’ [-Werror=unused-variable]
  105 |   long pos = hash(key, map->capacity);
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
b61e02d
